kubernetes/webserver/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trustup-io-trustup-pro-mock-webserver
  labels:
    tier: backend
    layer: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      layer: webserver
  template:
    metadata:
      labels:
        tier: backend
        layer: webserver
    spec:
      containers:
        - name: webserver
          image: henrotaym/trustup-io-trustup-pro-mock-web:0.0.1
          ports:
            - containerPort: 80
