kubernetes/webserver/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trustup-io-trustup-pro-mock-webserver
  annotations:
    # (Optional): Annotations for the Ingress Controller
    # -- ingress class is needed when traefik is not the default
    kubernetes.io/ingress.class: traefik
    # ---
    # -- entrypoint and tls configurations
    # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # ---
    # -- optional middlewares
    # traefik.ingress.kubernetes.io/router.middlewares:your-middleware@kubernetescrd
    # ---
  labels:
    tier: backend
    layer: webserver
spec:
  rules:
  - host: "tasks.trustup.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trustup-io-trustup-pro-mock-webserver
            port:
              number: 80
